# codebase-metrics-analyser

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
codebase-metrics-analyser/: metrics_visitor.py  write_metrics.py
src/: abstract_syntax_tree.py  main.py  visualise.py
